# secfetcher

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  static.yml
docs/: README.md  index.html
src/secfetch/: api.py  cli.py  downloader.py
src/secfetch/storage/: layout.py  manifest.py
tests/: test_secfetch.py
