[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secfetcher"
version = "0.1.2"
description = "Download SEC EDGAR filings by quarter/year via master index."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "secfetch contributors" }]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
secfetch = "secfetch.cli:main"
secfetcher = "secfetch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secfetch = ["resources/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

